// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User item Should render item with data: {"ImageURL":"","Acronym":"JR","FirstName":"John","LastName":"Rambo","DepartmentId":1910,"JobTitleId":12332,"UserKey":31232,"UsedDays":11,"AvailableDays":8,"EmployeeStartDate":"2005-01-03T00:00:00.000"}. 1`] = `
<tr>
  <td>
    <PersonalInfo
      Acronym="JR"
      DepartmentId={1910}
      FirstName="John"
      ImageURL=""
      JobTitleId={12332}
      LastName="Rambo"
    />
  </td>
  <td>
    31232
  </td>
  <td>
    <UserItem__ProgressBarContainer>
      <ProgressBar
        maxValue={8}
        value={11}
      />
    </UserItem__ProgressBarContainer>
  </td>
  <td>
    01/03/2005
  </td>
</tr>
`;

exports[`User item Should render item with data: {"ImageURL":"","Acronym":"JR","FirstName":"John","LastName":"Rambo","DepartmentId":1910,"JobTitleId":null,"UserKey":31232,"UsedDays":11,"AvailableDays":8,"EmployeeStartDate":"2005-01-03T00:00:00.000"}. 1`] = `
<tr>
  <td>
    <PersonalInfo
      Acronym="JR"
      DepartmentId={1910}
      FirstName="John"
      ImageURL=""
      JobTitleId={null}
      LastName="Rambo"
    />
  </td>
  <td>
    31232
  </td>
  <td>
    <UserItem__ProgressBarContainer>
      <ProgressBar
        maxValue={8}
        value={11}
      />
    </UserItem__ProgressBarContainer>
  </td>
  <td>
    01/03/2005
  </td>
</tr>
`;
